feat(DDSystemGUI): 增加现代化配色方案和中文界面支持
在主界面中引入了新的配色方案，提升了视觉效果。同时，所有界面文本已翻译为中文，增强了用户友好性。此外，更新了 `.gitignore` 文件以排除可执行文件。

--- a/DDSystemGUI/DDSystemGUI.vcxproj
+++ b/DDSystemGUI/DDSystemGUI.vcxproj
@@ -143,7 +143,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>H:\cpp\dependences\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <!-- Add necessary FLTK release libs, e.g., fltk.lib, fltkimages.lib -->
-      <AdditionalDependencies>fltk.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>fltk.lib;fltk_images.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
